# format_it

./: .gitignore  CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  format_float.hpp  format_it.cpp
tests/: CMakeLists.txt  test_format_float.cpp  test_format_helpers.cpp  test_format_integers.cpp  test_format_it.cpp  test_format_stl.cpp  test_stack_format.cpp
